second attempt at fixing the viewport issue with the background on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -24,7 +24,7 @@ html {
 body {
   background-color: #000;
   color: #fff;
-  font-family: "Inter", sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 header {
